IVYPORTAL-8386: Various or urgent requests in IVYPORTAL S181 - Fixed partly: 2 scrollbars on homepage with small screen - Bring back "js-custom-widget-container" so task widget can calculate height better - Fixed bug: lost button "Export" in CaseNoteHistory.xhtml on portrait IOS

--- a/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
+++ b/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
@@ -5184,3 +5184,7 @@ span.ui-inputnumber.ui-widget.ui-state-error {
   width: 20px !important;
   height: 20px !important;
 }
+
+.case-note-history-container {
+  padding-bottom: 20px;
+}
